PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? ????, PHP 5.0.6
- Fixed an error in mysqli_fetch_fields (returned NULL instead of an
  array when row number > field_count). (Georg)
- Renamed CachingRecursiveIterator to RecursiveCachingIterator. (Marcus)
- Fixed bug #35437 (Segfault or Invalid Opcode 137/1/4). (Dmitry)
- Fixed bug #35399 (Since fix of bug #35273 SOAP decoding of
  soapenc:base64binary fails). (Dmitry)
- Fixed bug #35360 (exceptions in interactive mode (php -a) may cause crash).
  (Dmitry)
- Fixed bug #35273 (Error in mapping soap - java types). (Dmitry)
- Fixed bug #35239 (Objects can lose references). (Dmitry)
- Fixed bug #35229 (call_user_func() crashes when arguement_stack is nearly
  full). (Dmitry)
- Fixed bug #35197 (Destructor is not called). (Tony)
- Fixed bug #35079 (stream_set_blocking(true) toggles, not enables 
  blocking). (askalski at gmail dot com, Tony)
- Fixed bug #35009 (ZTS: Persistent resource destruct crashes when extension
  is compiled as shared). (Dmitry)
- Fixed bug #34996 (ImageTrueColorToPalette() crashes when ncolors is
  zero). (Tony)
- Fixed bug #34982 (array_walk_recursive() modifies elements outside function
  scope). (Dmitry)
- Fixed bug #34978 (php out of memory or segmentation fault while installing
  sugarcrm 3.5.1a). (Dmitry)
- Fixed bug #34977 (Compile failure on MacOSX due to use of varargs.h). (Tony)
- Fixed bug #34950 (Unable to get WSDL through proxy). (Dmitry)
- Fixed bug #34938 (dns_get_record() doesn't resolve long hostnames and 
  leaks). (Tony)
- Fixed bug #34856 (configure fails to detect libiconv's type). (Tony)
- Fixed bug #34855 (ibase_service_attach() segfault on AMD64). 
  (irie at gmx dot de, Tony)
- Fixed bug #34810 (mysqli::init() and others use wrong $this pointer 
  without checks). (Tony)
- Fixed bug #34790 (preg_match_all(), named capturing groups, variable