@@ -18,7 +18,7 @@
    +----------------------------------------------------------------------+
 */
  
-/* $Id: php_mysql.c,v 1.209.2.2 2005/04/07 22:23:28 sniper Exp $ */
+/* $Id: php_mysql.c,v 1.209.2.3 2005/12/05 13:19:43 tony2001 Exp $ */
 
 /* TODO:
  *
@@ -2175,6 +2175,9 @@ static char *php_mysql_get_field_name(int field_type)
 		case FIELD_TYPE_FLOAT:
 		case FIELD_TYPE_DOUBLE:
 		case FIELD_TYPE_DECIMAL:
+#ifdef FIELD_TYPE_NEWDECIMAL
+		case FIELD_TYPE_NEWDECIMAL:
+#endif
 			return "real";
 			break;
 		case FIELD_TYPE_TIMESTAMP:
@@ -2186,11 +2189,25 @@ static char *php_mysql_get_field_name(int field_type)
 			break;
 #endif
 		case FIELD_TYPE_DATE:
+#ifdef FIELD_TYPE_NEWDATE
+		case FIELD_TYPE_NEWDATE:
+#endif
 			return "date";
 			break;
 		case FIELD_TYPE_TIME:
 			return "time";
 			break;
+		case FIELD_TYPE_SET:
+			return "set";
+			break;
+		case FIELD_TYPE_ENUM:
+			return "enum";
+			break;
+#ifdef FIELD_TYPE_GEOMETRY
+		case FIELD_TYPE_GEOMETRY:
+			return "geometry";
+			break;
+#endif
 		case FIELD_TYPE_DATETIME:
 			return "datetime";
 			break;
